--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Document</title>
+		<title>HOME</title>
 		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<canvas id="chart"></canvas>
+		<header>
+			<h1 class="heading">Your Heading here .....</h1>
+		</header>
+		<main>
+			<div class="container-fluid">
+				<ul>
+					<li><span>ARHAR</span></li>
+					<li><span>COTTON</span></li>
+					<li><span>GRAM</span></li>
+					<li><span>GROUNDNUT</span></li>
+					<li><span>MAIZE</span></li>
+					<li><span>MOONG</span></li>
+					<li><span>PADDY</span></li>
+					<li><span>RAPESEED AND MUSTARD</span></li>
+					<li><span>SUGARCANE</span></li>
+					<li><span>WHEAT</span></li>
+				</ul>
+			</div>
+			<canvas id="chart" height="110px"></canvas>
+		</main>
 		<script type="text/javascript" src="main.js"></script>
 		<!-- <script type="text/javascript" src="second.js"></script> -->
 	</body>
