this is my commit

--- a/index.html
+++ b/index.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>HOME</title>
-		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-		<link rel="stylesheet" href="style.css" />
-	</head>
-	<body>
-		<header>
-			<h1 class="heading">Your Heading here .....</h1>
-		</header>
-		<main>
-			<div class="container-fluid">
-				<ul>
-					<li><span>ARHAR</span></li>
-					<li><span>COTTON</span></li>
-					<li><span>GRAM</span></li>
-					<li><span>GROUNDNUT</span></li>
-					<li><span>MAIZE</span></li>
-					<li><span>MOONG</span></li>
-					<li><span>PADDY</span></li>
-					<li><span>RAPESEED AND MUSTARD</span></li>
-					<li><span>SUGARCANE</span></li>
-					<li><span>WHEAT</span></li>
-				</ul>
-			</div>
-			<canvas id="chart" height="110px"></canvas>
-		</main>
-		<script type="text/javascript" src="main.js"></script>
-		<!-- <script type="text/javascript" src="second.js"></script> -->
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>HOME</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1 class="heading">Yield Prediction Using ML</h1>
+    </header>
+    <main>
+      <div class="container-fluid">
+        <ul>
+          <li><span>ARHAR</span></li>
+          <li><span>COTTON</span></li>
+          <li><span>GRAM</span></li>
+          <li><span>GROUNDNUT</span></li>
+          <li><span>MAIZE</span></li>
+          <li><span>MOONG</span></li>
+          <li><span>PADDY</span></li>
+          <li><span>RAPESEED AND MUSTARD</span></li>
+          <li><span>SUGARCANE</span></li>
+          <li><span>WHEAT</span></li>
+        </ul>
+      </div>
+
+      <canvas id="chart1" height="110px"></canvas>
+      <canvas id="chart2" height="110px"></canvas>
+      <canvas id="chart3" height="110px"></canvas>
+      <canvas id="chart4" height="110px"></canvas>
+      <canvas id="chart5" height="110px"></canvas>
+    </main>
+    <script type="text/javascript" src="main.js"></script>
+    <!-- <script type="text/javascript" src="second.js"></script> -->
+  </body>
 </html>
