--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="col-12">
 							<div class="card">
 								<div class="card-body">
-									<canvas id="chart1" height="130px"></canvas>
+									<canvas id="chart1"></canvas>
 								</div>
 							</div>
 						</div>
